# rogalik

./: CHANGELOG.MD  CMakeLists.txt  README.MD
src/characters/: character.cpp  character.hpp
src/characters/heroes/: hero.cpp  hero.hpp
src/characters/tests/: hero_give_xp.cpp  hero_heal.cpp  hero_heal_2.cpp  hero_lvl_up.cpp  hero_take_dmg.cpp  hero_take_dmg_and_kill.cpp
src/items/: item.cpp  item.hpp
src/items/defensive/: medpackmedium.cpp  medpackmedium.hpp  medpacksmall.cpp  medpacksmall.hpp
src/items/tests/: medpackmedium_add_to_backpack.cpp  medpackmedium_use_on_hero.cpp  medpacksmall_add_to_backpack.cpp  medpacksmall_use_on_hero.cpp
